--- a/Xamarin/InstaPrep/InstaPrep/Views/AboutPage.xaml
+++ b/Xamarin/InstaPrep/InstaPrep/Views/AboutPage.xaml
@@ -18,6 +18,7 @@
         </Grid.RowDefinitions>
         <StackLayout>
 
+            <!-- Adam Image -->
             <Image Source="adam.png" Aspect="AspectFill" VerticalOptions="Center" HeightRequest="250" />
 
         </StackLayout>
@@ -27,8 +28,9 @@
                 <Label Text="Hi, I'm Adam" FontSize="Title"/>
 
                 <!-- Breif -->
-                <Label Text="I created this small app as part of a skills assessment for a Xamarin project, and it’s been a lot of fun. Below is a list of some of the platforms I’ve touched over the 15 years." FontSize="16" Padding="0,0,0,0"/>
+                <Label Text="I created this small app as part of a skills assessment for a Xamarin project, and it’s been a lot of fun. Below is a list of some of the platforms touched over the last 15 years." FontSize="16" Padding="0,0,0,0"/>
 
+                <!-- Resume -->
                 <Grid Margin="0,20" ColumnDefinitions="*,*">
 
                     <Button Grid.Column="0" Margin="0,10,0,0" Text="View Résumé"
@@ -37,9 +39,11 @@
                         TextColor="White" />
 
                     <Button Grid.Column="1" Margin="0,10,0,0" Text="Share Résumé"
-                        Command="{Binding OpenWebCommand}"
-                        BackgroundColor="{StaticResource Primary}"
-                        TextColor="White" />
+                        Command="{Binding SharePDFCommand}"
+                        BorderColor="{StaticResource Primary}"
+                        BackgroundColor="White"
+                        BorderWidth="2"
+                        TextColor="{StaticResource Primary}" />
 
                 </Grid>
 
