--- a/Xamarin/InstaPrep/InstaPrep/Views/RecipesPage.xaml
+++ b/Xamarin/InstaPrep/InstaPrep/Views/RecipesPage.xaml
@@ -1,17 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="InstaPrep.Views.RecipesPage"
-             Title="{Binding Title}"
-             xmlns:local="clr-namespace:InstaPrep.ViewModels"  
-             xmlns:model="clr-namespace:InstaPrep.Models"
-             xmlns:ffimageloadingsvg="clr-namespace:FFImageLoading.Svg.Forms;assembly=FFImageLoading.Svg.Forms"
-             xmlns:xct="http://xamarin.com/schemas/2020/toolkit"
-             xmlns:convert="clr-namespace:InstaPrep.Converters"
-             xmlns:behaviors="clr-namespace:InstaPrep.Behaviors"
-             xmlns:effects="clr-namespace:InstaPrep.Effects"
-             Background="#F8F6F9"
-             x:Name="RecipesListPage">
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" x:Class="InstaPrep.Views.RecipesPage" Title="{Binding Title}"
+    xmlns:local="clr-namespace:InstaPrep.ViewModels"
+    xmlns:model="clr-namespace:InstaPrep.Models"
+    xmlns:ffimageloadingsvg="clr-namespace:FFImageLoading.Svg.Forms;assembly=FFImageLoading.Svg.Forms"
+    xmlns:xct="http://xamarin.com/schemas/2020/toolkit"
+    xmlns:convert="clr-namespace:InstaPrep.Converters"
+    xmlns:behaviors="clr-namespace:InstaPrep.Behaviors"
+    xmlns:effects="clr-namespace:InstaPrep.Effects" Background="#F8F6F9" x:Name="RecipesListPage">
 
     <!-- Converters -->
     <ContentPage.Resources>
@@ -28,25 +24,14 @@
     <Grid RowDefinitions="auto, auto, auto" Padding="10,10" x:DataType="local:RecipesViewModel">
 
         <!-- Search Bar -->
-        <SearchBar x:Name="searchEntry"
-                   HeightRequest="50"
-                   Placeholder="Find recipe">
+        <SearchBar x:Name="searchEntry" HeightRequest="50" Placeholder="Find recipe" >
 
             <SearchBar.Behaviors>
-                <behaviors:SearchTextChangedBehavior
-                    Command="{Binding SearchTextChanged}"
-                    CommandParameter="{Binding Text, Source={x:Reference searchEntry}}" />
+                <behaviors:SearchTextChangedBehavior Command="{Binding SearchTextChanged}" CommandParameter="{Binding Text, Source={x:Reference searchEntry}}" />
             </SearchBar.Behaviors>
 
             <SearchBar.Effects>
-                <effects:SearchBarEffect
-                    ShadowRadius="10"
-                    SearchBackgroundColor="White"
-                    ShadowColor="Black"
-                    ShadowDistanceX="0"
-                    ShadowDistanceY="0"
-                    ShadowFocusOpacity=".5"
-                    ShadowUnfocusOpacity=".2" />
+                <effects:SearchBarEffect ShadowRadius="10" SearchBackgroundColor="White" ShadowColor="Black" ShadowDistanceX="0" ShadowDistanceY="0" ShadowFocusOpacity=".5" ShadowUnfocusOpacity=".2" />
             </SearchBar.Effects>
 
         </SearchBar>
@@ -58,17 +43,8 @@
                     <Grid Padding="10" Margin="10" x:DataType="model:RecipeCategory">
                         <Button Text="{Binding Name}" TextColor="Black">
                             <Button.Behaviors>
-                                <behaviors:SelectableButtonBehavorBehavior
-                                    Command="{Binding BindingContext.CategoryChanged, Source={x:Reference RecipesListPage}}"
-                                    SelectedIdentifier="{Binding BindingContext.SelectedCategory.Id, Source={x:Reference RecipesListPage}, Mode=TwoWay}"
-                                    CurrentIdentifier="{Binding Id}"
-                                    SelectedColor="#FFCC28"
-                                    UnSelectedColor="White"
-                                 />
-
+                                <behaviors:SelectableButtonBehavorBehavior Command="{Binding BindingContext.CategoryChanged, Source={x:Reference RecipesListPage}}" SelectedIdentifier="{Binding BindingContext.SelectedCategory.Id, Source={x:Reference RecipesListPage}, Mode=TwoWay}" CurrentIdentifier="{Binding Id}" SelectedColor="#FFCC28" UnSelectedColor="White" />
                             </Button.Behaviors>
-
-
                         </Button>
                     </Grid>
                 </DataTemplate>
@@ -77,83 +53,47 @@
 
         <!-- Recipes List -->
         <RefreshView Grid.Row="2" Command="{Binding LoadItemsCommand}" IsRefreshing="{Binding IsBusy, Mode=TwoWay}">
-            <CollectionView x:Name="ItemsListView"
-                    ItemsSource="{Binding FilteredRecipes}"
-                    ItemsLayout="VerticalGrid, 2"
-                    SelectionMode="None">
+            <CollectionView x:Name="ItemsListView" ItemsSource="{Binding FilteredRecipes}" ItemsLayout="VerticalGrid, 2" SelectionMode="None">
                 <CollectionView.ItemTemplate>
                     <DataTemplate>
                         <Grid Padding="10,10">
 
-                            <Frame HasShadow="False" Margin="0,60,0,0"
-                                   xct:ShadowEffect.Color="Black"
-                                   xct:ShadowEffect.Opacity=".2"
-                                    xct:ShadowEffect.OffsetY="5"
-                                        xct:ShadowEffect.Radius="10">
-
-
+                            <!-- Background Frame -->
+                            <Frame HasShadow="False" Margin="0,60,0,0" xct:ShadowEffect.Color="Black" xct:ShadowEffect.Opacity=".2" xct:ShadowEffect.OffsetY="5" xct:ShadowEffect.Radius="10">
                             </Frame>
 
-
                             <StackLayout Spacing="20" Margin="0,0,0,0" Padding="10" x:DataType="model:Recipe">
-                                <Frame CornerRadius="50"
-                                   HorizontalOptions="Center"
-                                   VerticalOptions="Center"
-                                HeightRequest="100"
-                                WidthRequest="100"
-                                Padding="0"
-                                IsClippedToBounds="True">
-                                    <Image Source="{Binding ImageUrl}"
-                                       HorizontalOptions="Center"
-                                           Aspect="Fill"
-               VerticalOptions="Center">
+
+                                <!-- Recipe Image -->
+                                <Frame CornerRadius="50" HorizontalOptions="Center" VerticalOptions="Center" HeightRequest="100" WidthRequest="100" Padding="0" IsClippedToBounds="True">
+                                    <Image Source="{Binding ImageUrl}" HorizontalOptions="Center" Aspect="Fill" VerticalOptions="Center">
                                     </Image>
                                 </Frame>
-                                <Label Text="{Binding Title}"
-                                   FontAttributes="Bold"
-                                   HorizontalTextAlignment="Center"
-                                    LineBreakMode="TailTruncation"
-                                    VerticalTextAlignment="Center"
-                                    MaxLines="2"
-                                    Style="{DynamicResource ListItemTextStyle}" 
-                                    FontSize="16" />
-                                    <Grid ColumnDefinitions="*,*,*">
 
-                                        <StackLayout>
-                                            <Label Text="{Binding Duration}" 
-                                    LineBreakMode="WordWrap"
-                                                   MaxLines="2"
-                                    Style="{DynamicResource ListItemDetailTextStyle}"
-                                    FontSize="13" />
+                                <!-- Title -->
+                                <Label Text="{Binding Title}" FontAttributes="Bold" HorizontalTextAlignment="Center" LineBreakMode="TailTruncation" VerticalTextAlignment="Center" MaxLines="2" HeightRequest="40" Style="{DynamicResource ListItemTextStyle}" FontSize="16" />
+                                
+                                <Grid ColumnDefinitions="*,*,*">
 
+                                    <!-- Duration -->
+                                    <StackLayout>
+                                        <Label Text="{Binding Duration}" LineBreakMode="WordWrap" MaxLines="2" Style="{DynamicResource ListItemDetailTextStyle}" FontSize="13" />
+                                    </StackLayout>
 
-                                        </StackLayout>
-                                        <StackLayout Grid.Column="1">
+                                    <!-- Rating -->
+                                    <StackLayout Grid.Column="1">
+                                        <ffimageloadingsvg:SvgCachedImage WidthRequest="30" HeightRequest="30" Source="{Binding Rating, Converter={StaticResource ratingIconConverter}}"/>
+                                    </StackLayout>
 
-                                            <ffimageloadingsvg:SvgCachedImage WidthRequest="30" HeightRequest="30" Source="{Binding Rating, Converter={StaticResource ratingIconConverter}}"/>	
-
-                                        </StackLayout>
-                                        <StackLayout Grid.Column="2">
-                                   
-
-                                            <Label Text="{Binding Effort}"
-                                                   HorizontalTextAlignment="End"
-                                    LineBreakMode="NoWrap"
-                                    VerticalTextAlignment="Center"
-                                    Style="{DynamicResource ListItemDetailTextStyle}"
-                                    FontSize="13" />
-
-
-                                        </StackLayout>
-
-
-                                    </Grid>
+                                    <!-- Effort -->
+                                    <StackLayout Grid.Column="2">
+                                        <Label Text="{Binding Effort}" HorizontalTextAlignment="End" LineBreakMode="NoWrap" VerticalTextAlignment="Center" Style="{DynamicResource ListItemDetailTextStyle}" FontSize="13" />
+                                    </StackLayout>
+                                    
+                                </Grid>
 
                                 <StackLayout.GestureRecognizers>
-                                    <TapGestureRecognizer 
-                                    NumberOfTapsRequired="1"
-                                    Command="{Binding Source={RelativeSource AncestorType={x:Type local:RecipesViewModel}}, Path=ItemTapped}"		
-                                    CommandParameter="{Binding .}">
+                                    <TapGestureRecognizer NumberOfTapsRequired="1" Command="{Binding Source={RelativeSource AncestorType={x:Type local:RecipesViewModel}}, Path=ItemTapped}" CommandParameter="{Binding .}">
                                     </TapGestureRecognizer>
                                 </StackLayout.GestureRecognizers>
                             </StackLayout>
