--- a/Xamarin/InstaPrep/InstaPrep/Views/RecipeDetailPage.xaml
+++ b/Xamarin/InstaPrep/InstaPrep/Views/RecipeDetailPage.xaml
@@ -87,7 +87,7 @@
 
         <StackLayout xct:ShadowEffect.Color="Black" xct:ShadowEffect.Opacity=".5" xct:ShadowEffect.OffsetY="5" xct:ShadowEffect.Radius="10" IsClippedToBounds="False" HorizontalOptions="Start" Margin="30,50" WidthRequest="40" HeightRequest="40">
 
-            <ffimageloadingsvg:SvgCachedImage Opacity=".9" Source="previous-white.svg"/>
+            <ffimageloadingsvg:SvgCachedImage Opacity=".9" Source="resource://InstaPrep.SVG.previous_white.svg"/>
 
             <StackLayout.GestureRecognizers>
                 <TapGestureRecognizer NumberOfTapsRequired="1" Command="{Binding Source={RelativeSource AncestorType={x:Type local:RecipeDetailViewModel}}, Path=BackCommand}" CommandParameter="{Binding .}">
